--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -34,11 +34,6 @@
     font-size: 12px;
 }
 
-.emptyHint strong {
-    color: var(--text-secondary);
-    font-weight: 600;
-}
-
 .list {
     display: flex;
     flex-direction: column;
